# masterbrain

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  PLATFORM_SUPPORT.md  PLATFORM_SUPPORT.zh-CN.md  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  package.json  pyproject.toml  pytest.ini
.github/workflows/: release.yml
apps/api/: README.md  pyproject.toml
apps/api/packaging/pyinstaller/: masterbrain.spec
apps/api/scripts/: build_desktop_bundle.sh
apps/api/src/masterbrain/: build_desktop_bundle.py  desktop.py
apps/api/src/masterbrain/endpoints/: __init__.py
apps/api/src/masterbrain/endpoints/chat/field_input/logic/: slot_service.py
apps/api/src/masterbrain/fastapi/: main.py
apps/api/tests/test_endpoints/test_library/: conftest.py  test_router.py
apps/api/tests/test_packaging/: test_desktop_packaging.py
apps/studio/: README.md  SETUP.md  package-lock.json  package.json
apps/studio/src/: App.vue  index.css
apps/web/: SETUP.md  vite.config.ts
apps/web/src/: main.ts
docs/en/: ai-architecture.md  code-structure.md  index.md  quickstart.md  workspace-and-editing.md
docs/en/endpoints/: aira.md
docs/zh/: README.md  ai-architecture.md  code-structure.md  index.md  quickstart.md  test.md  workspace-and-editing.md
docs/zh/ai-automated-field-input/: README.md
docs/zh/chat/: data-structure.md  record-qa.md
docs/zh/endpoints/: README.md  aira.md
src/masterbrain/: configs.py
src/masterbrain/endpoints/: __init__.py
src/masterbrain/fastapi/: main.py
src/masterbrain/prompts/: __init__.py
src/masterbrain/types/: chat.py  error.py
src/masterbrain/utils/: print.py
src/web/: README.md  SETUP.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/web/src/: App.vue  index.css
tests/test_endpoints/test_aira/: test_router.py
tests/test_endpoints/test_paper_generation/: example_output_paper.md  test_api_key_handling.py  test_input_without_ref.json  test_integration.py  (+2 more)
(+160 files in other folders)
